manifests/StatefulSet.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: consul
  labels:
    app: consul
    stack: kv
spec:
  serviceName: consul
  replicas: $CLUSTER_SIZE
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: consul
        stack: kv
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1000 # Allow non-root user to access PersistentVolume
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: consul-node
                operator: In
                values:
                - "true"
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - "consul"
      containers:
      - name: consul
        image: consul:latest
        command:
          - "/bin/sh"
          - "-ec"
          - |
            [...]
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - consul
            - members
          initialDelaySeconds: 300
          timeoutSeconds: 5
        ports:
        - name: server
          containerPort: 8300
        - name: rpc
          containerPort: 8400
        - name: http
          containerPort: 8500
        - name: serflan-tcp
          protocol: TCP
          containerPort: 8301
        - name: serflan-udp
          protocol: UDP
          containerPort: 8301
        - name: serfwan-tcp
          protocol: TCP
          containerPort: 8302
        - name: serfwan-udp
          protocol: UDP
          containerPort: 8302
        - name: consuldns-tcp
          protocol: TCP
          containerPort: 8600
        - name: consuldns-udp
          protocol: UDP
          containerPort: 8600
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /consul/data
      volumes:
      - name: data
        hostPath:
          path: /data/consul/data
