manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
  labels:
    app: consul
    stack: kv
spec:
  type: ClusterIP
  selector:
    app: consul
    stack: kv
  ports:
  - name: server
    port: 8300
  - name: rpc
    port: 8400
  - name: http
    port: 8500
  - name: serflan-tcp
    protocol: TCP
    port: 8301
  - name: serflan-udp
    protocol: UDP
    port: 8301
  - name: serfwan-tcp
    protocol: TCP
    port: 8302
  - name: serfwan-udp
    protocol: UDP
    port: 8302
  - name: consuldns-tcp
    protocol: TCP
    port: 8600
  - name: consuldns-udp
    protocol: UDP
    port: 8600
